# hometown-xr

./: .gitattributes  .gitignore  HANDOFF.md  README.md  benchmark.py  checkpoint.py  concepts.py  config.py  crawl_catalog.py  credential_guard.py  database_checkpoint.py  downloader.py  evaluation.py  export_md.py  inference_cache.py  language_detector.py  main.py  matcher.py  metrics.py  output.py  parquet_export.py  pipeline.py  processor.py  progress.py  pyproject.toml  quality.py  record_identity.py  refilter_output.py  requirements-lock-5090.txt  requirements-lock.txt  requirements-test.txt  requirements.txt  review.py  run_lock.py  runtime.py  signatures.py  story_context.py  story_control.py  story_enrichment.py
.github/: dependabot.yml
.github/workflows/: ci.yml
4090/: README.md  _run_root.py  config.py  main.py  refilter_output.py  requirements.txt  review.py
data/: progress.db
data/evaluation/: annotations.jsonl
data/exports/: matches_de.md  matches_es.md  matches_fr.md  matches_it.md  matches_nl.md  matches_no.md  matches_pt.md  matches_sk.md  matches_sv.md  stories_en.md  stories_es.md  stories_it.md  stories_pt.md
scripts/: audit.ps1  checkpoint.ps1  evaluate_filters.py  evaluation.ps1  filter-state.ps1  handoff.ps1  refresh-results.ps1  run.ps1  security-check.ps1  setup.ps1  stories.ps1  test.ps1
tests/: test_checkpoint.py  test_concepts.py  test_credential_guard.py  test_data_products.py  test_dependency_profiles.py  test_export_md.py  test_filters.py  test_inference_cache.py  test_language_detector.py  test_main_worker.py  test_metrics.py  test_output.py  test_processor.py  test_progress.py  test_quality.py  test_refilter.py  test_run_lock.py  test_signatures.py  test_story_context.py  test_story_control.py  test_story_enrichment.py
(+1 files in other folders)
